src/components/css/user_details.css
.headers {
    display: flex;
    justify-content: space-between;
    height: 300px;
    margin-top: 20px;
    margin-left: 50px;
    margin-right: 50px;
}

.body {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background: #E4EFFF;
    height: 550px;
}

.avatar {
    margin-left: 150px;
    margin-top: -200px;
    width: 340px;
    height: 340px;
    border: 20px solid #C4D5EF;
    border-radius: 190px;
}

h1 {
    text-align: center;
}

.contact {
    display: flex;
    flex-direction: row;
}

.contact-info {
    display: flex;
    flex-direction: row;
    margin-left: 20px;
}

.icon {
    margin-right: 10px;
}

.text {
    font-size: 20px;
}
.logo {
    width: 181px;
    height: 50px
}

@media screen and (max-width: 476px) {
   
    .avatar{
        width: 180px;
        height: 180px;
        margin-top: -100px;
        margin-left: 80px;
    }

    .icon{
       width: 20px;
       height: 20px;
    }
    .text{
        font-size: 10px;
    }
    h1{
        font-size: 20px;
    }
    .logo{
        width: 150px;
    }
}

